project/visa/test/assembler/error/duplicated-label.asm
TAG:
  sleep
  nop
  jmp @TAG
TAG:
  nop
